simple approach to showing multiple canvases per related iiif manifest

--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -151,6 +151,10 @@ li, .afs-report-a.active:hover {
     color: #25476a !important;
 }
 
+.afs-summary-report-image-grid {
+    display: inline-block;
+}
+
 .afs-tabbed-report{
     width: calc(100% - 1px);
     overflow: auto;
