--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -238,7 +238,7 @@
                 <!-- /ko -->
 
                 <!-- ko if: imageSummary() -->
-                <div class="" data-bind="dataTablesForEach: { data: imageSummary, dataTableOptions: getTableConfig(1) }">
+                <div class="afs-summary-report-image-grid" data-bind="dataTablesForEach: { data: imageSummary, dataTableOptions: getTableConfig(1) }">
                     <div class="iiif-gallery-canvas-thumbnail">
                         <img data-bind="attr: { src: thumbnail }">
                         <label data-bind = "text: displayname"></label>
