--- a/afs/templates/views/components/reports/observation.htm
+++ b/afs/templates/views/components/reports/observation.htm
@@ -170,13 +170,9 @@
 </div>
 <div class="model-summary-report">
     <div class="afs-report-page">
-        <!-- Names -->
         <div class="afs-report-section">
-            <h2 class="afs-report-section-title">{% trans "Object Names" %}</h2>
             <div class="afs-report-subsection" >
-                <!-- ko ifnot: nameSummary() && nameSummary().length -->
-                <h3 class="afs-report-nodata-message">{% trans "There are no names for this resource" %}</h3>
-                <!-- /ko -->
+                <!-- Names -->
                 <!-- ko if: nameSummary() && nameSummary().length -->
                 <div class="afs-table pad-btm">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -195,15 +191,7 @@
                     </table>
                 </div>
                 <!-- /ko -->
-            </div>
-        </div>
-        <!-- Statement -->
-        <div class="afs-report-section">
-            <h2 class="afs-report-section-title">{% trans "Statements" %}</h2>
-            <div class="afs-report-subsection" >
-                <!-- ko ifnot: statementSummary() && statementSummary().length -->
-                <h3 class="afs-report-nodata-message">{% trans "There are no statements for this resource" %}</h3>
-                <!-- /ko -->
+                <!-- Statement -->
                 <!-- ko if: statementSummary() && statementSummary().length -->
                 <div class="afs-table pad-btm">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -222,57 +210,57 @@
                     </table>
                 </div>
                 <!-- /ko -->
-            </div>
-        </div>
-        <!-- Object Observed -->
-        <div class="afs-report-section">
-            <h2 class="afs-report-section-title">{% trans "Observed Object" %}</h2>
-            <div class="afs-report-subsection" >
-                <!-- ko ifnot: objectObservedSummary() && objectObservedSummary().length -->
-                <h3 class="afs-report-nodata-message">{% trans "There are no observed objects for this resource" %}</h3>
-                <!-- /ko -->
+                <!-- Object Observed -->
                 <!-- ko if: objectObservedSummary() && objectObservedSummary().length -->
-                <div class="afs-report-data-block" data-bind="foreach: objectObservedSummary ">
-                    <div class="afs-block-value"><a data-bind="click: function() {window.open(link);}, text: displayValue" href="javascript:void(0)"></a><!-- ko if: $index() < $parent.objectObservedSummary().length - 1  -->, <!-- /ko --></div>
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Observed Object" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: objectObservedSummary, dataTableOptions: getTableConfig(1) }">
+                            <tr>
+                                <td><a class="afs-table-link" data-bind="click: function() {window.open(link);}, text: displayValue" href="javascript:void(0)"></a></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <!-- /ko -->
-            </div>
-        </div>
-        <!-- Procedure --> 
-        <div class="afs-report-section">
-            <h2 class="afs-report-section-title">{% trans "Procedures" %}</h2>
-            <div class="afs-report-subsection" >
-                <!-- ko ifnot: procedureSummary() -->
-                <h3 class="afs-report-nodata-message">{% trans "There are no procedures for this resource" %}</h3>
-                <!-- /ko -->
-                <!-- ko if: procedureSummary() -->
-                <div class="afs-report-data-block">
-                    <div class="afs-block-value"><a data-bind="click: function() {window.open(link);}, text: displayValue" href="javascript:void(0)"></a></div>
+                <!-- Procedure --> 
+                <!-- ko if: procedureSummary() && procedureSummary().length -->
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Procedure/Method Used" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: procedureSummary, dataTableOptions: getTableConfig(1) }">
+                            <tr>
+                                <td><a class="afs-table-link" data-bind="click: function() {window.open(link);}, text: displayValue" href="javascript:void(0)"></a></td>                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <!-- /ko -->
-            </div>
-        </div>
-        <!-- Person Carried out -->
-        <div class="afs-report-section">
-            <h2 class="afs-report-section-title">{% trans "Person Carried out" %}</h2>
-            <div class="afs-report-subsection" >
-                <!-- ko ifnot: personSummary() && personSummary().length-->
-                <h3 class="afs-report-nodata-message">{% trans "There are no persons for this resource" %}</h3>
-                <!-- /ko -->
-                <!-- ko if: personSummary() && personSummary().length-->
-                <div class="afs-report-data-block" data-bind="foreach: personSummary ">
-                    <div class="afs-block-value"><a data-bind="click: function() {window.open(link);}, text: displayValue" href="javascript:void(0)"></a><!-- ko if: $index() < $parent.personSummary().length - 1  -->, <!-- /ko --></div>
+                <!-- Person Carried out --> 
+                <!-- ko if: personSummary() && personSummary().length -->
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Person Carrying Out Observation" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: personSummary, dataTableOptions: getTableConfig(1) }">
+                            <tr>
+                                <td><a class="afs-table-link" data-bind="click: function() {window.open(link);}, text: displayValue" href="javascript:void(0)"></a></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <!-- /ko -->
-            </div>
-        </div>
-        <!-- Timespan --> 
-        <div class="afs-report-section">
-            <h2 class="afs-report-section-title">{% trans "Timespan" %}</h2>
-            <div class="afs-report-subsection" >
-                <!-- ko ifnot: timeSpanSummary() -->
-                <h3 class="afs-report-nodata-message">{% trans "There are no timespans for this resource" %}</h3>
-                <!-- /ko -->
+                <!-- Timespan --> 
                 <!-- ko if: timeSpanSummary() -->
                 <div class="afs-table pad-btm">
                     <table data-bind="datatable: timespanTableConfig" class="table table-striped" cellspacing="0" width="100%">
