--- a/afs/templates/views/components/reports/observation.htm
+++ b/afs/templates/views/components/reports/observation.htm
@@ -172,7 +172,7 @@
     <div class="afs-report-page">
         <!-- Names -->
         <div class="afs-report-section">
-            <h2 class="afs-report-section-title">{% trans "Object Names" %}</h2>
+            <h2 class="afs-report-section-title">{% trans "Observation Names" %}</h2>
             <div class="afs-report-subsection" >
                 <!-- ko ifnot: nameSummary() && nameSummary().length -->
                 <h3 class="afs-report-nodata-message">{% trans "There are no names for this resource" %}</h3>
@@ -226,7 +226,7 @@
         </div>
         <!-- Object Observed -->
         <div class="afs-report-section">
-            <h2 class="afs-report-section-title">{% trans "Observed Object" %}</h2>
+            <h2 class="afs-report-section-title">{% trans "Observed Objects" %}</h2>
             <div class="afs-report-subsection" >
                 <!-- ko ifnot: objectObservedSummary() && objectObservedSummary().length -->
                 <h3 class="afs-report-nodata-message">{% trans "There are no observed objects for this resource" %}</h3>
@@ -254,7 +254,7 @@
         </div>
         <!-- Person Carried out -->
         <div class="afs-report-section">
-            <h2 class="afs-report-section-title">{% trans "Person Carried out" %}</h2>
+            <h2 class="afs-report-section-title">{% trans "Persons Carried out" %}</h2>
             <div class="afs-report-subsection" >
                 <!-- ko ifnot: personSummary() && personSummary().length-->
                 <h3 class="afs-report-nodata-message">{% trans "There are no persons for this resource" %}</h3>
