--- a/afs/templates/views/components/reports/place.htm
+++ b/afs/templates/views/components/reports/place.htm
@@ -131,7 +131,7 @@
             <h2 class="afs-report-section-title">{% trans "Geospatial Definitions" %}</h2>
             <div class="afs-report-subsection" >
                 <!-- ko if: geojson == '--' -->
-                <h3 class="afs-report-nodata-message">{% trans "There's no geospatial definitions for this resource" %}</h3>
+                <h3 class="afs-report-nodata-message">{% trans "There's no geospatial definition for this resource" %}</h3>
                 <!-- /ko -->
                 <!-- ko if: geojson != '--' -->
                 <div data-bind="component: {
