--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -280,7 +280,7 @@
             <h2 class="afs-report-section-title">{% trans "Object Type" %}</h2>
             <div class="afs-report-subsection">
                 <!-- ko ifnot: typeSummary() && typeSummary().length -->
-                <h3 class="afs-report-nodata-message">{% trans "There's no object information for this resource" %}</h3>
+                <h3 class="afs-report-nodata-message">{% trans "There is no object type information for this resource" %}</h3>
                 <!-- /ko -->
 
                 <!-- ko if: typeSummary() && typeSummary().length -->
@@ -295,7 +295,7 @@
             <h2 class="afs-report-section-title">{% trans "Object Identifiers" %}</h2>
             <div class="afs-report-subsection">
                 <!-- ko ifnot: identifierSummary() && identifierSummary().length -->
-                <h3 class="afs-report-nodata-message">{% trans "There's no object identifier information for this resource" %}</h3>
+                <h3 class="afs-report-nodata-message">{% trans "There is no object identifier information for this resource" %}</h3>
                 <!-- /ko -->
 
                 <!-- ko if: identifierSummary() && identifierSummary().length -->
@@ -323,7 +323,7 @@
             <h2 class="afs-report-section-title">{% trans "Ownership" %}</h2>
             <div class="afs-report-subsection">
                 <!-- ko ifnot: ownerSummary() && ownerSummary().length -->
-                <h3 class="afs-report-nodata-message">{% trans "There's no object ownership information for this resource" %}</h3>
+                <h3 class="afs-report-nodata-message">{% trans "There is no object ownership information for this resource" %}</h3>
                 <!-- /ko -->
 
                 <!-- ko if: ownerSummary() && ownerSummary().length -->
@@ -338,7 +338,7 @@
             <h2 class="afs-report-section-title">{% trans "Object Dimensions" %}</h2>
             <div class="afs-report-subsection">
                 <!-- ko ifnot: dimensionsSummary() && dimensionsSummary().length -->
-                <h3 class="afs-report-nodata-message">{% trans "There's no object dimension information for this resource" %}</h3>
+                <h3 class="afs-report-nodata-message">{% trans "There is no object dimension information for this resource" %}</h3>
                 <!-- /ko -->
 
                 <!-- ko if: dimensionsSummary() && dimensionsSummary().length -->
@@ -368,7 +368,7 @@
             <h2 class="afs-report-section-title">{% trans "Object Creation" %}</h2>
             <div class="afs-report-subsection">
                 <!-- ko ifnot: creationSummary() && creationSummary().length -->
-                <h3 class="afs-report-nodata-message">{% trans "There's no object creation information for this resource" %}</h3>
+                <h3 class="afs-report-nodata-message">{% trans "There is no object creation information for this resource" %}</h3>
                 <!-- /ko -->
 
                 <!-- ko if: creationSummary() && creationSummary().length -->
@@ -402,7 +402,7 @@
             <h2 class="afs-report-section-title">{% trans "Links" %}</h2>
             <div class="afs-report-subsection">
                 <!-- ko ifnot: externalURISummary() && externalURISummary().length -->
-                <h3 class="afs-report-nodata-message">{% trans "There's no object link information for this resource" %}</h3>
+                <h3 class="afs-report-nodata-message">{% trans "There is no object link information for this resource" %}</h3>
                 <!-- /ko -->
 
                 <!-- ko if: externalURISummary() && externalURISummary().length -->
