--- a/afs/templates/views/components/reports/project.htm
+++ b/afs/templates/views/components/reports/project.htm
@@ -159,7 +159,12 @@
 
         <!-- Names -->
         <div class="afs-report-section">
+            <h2 class="afs-report-section-title">{% trans "Name of Project" %}</h2>
             <div class="afs-report-subsection">
+                <!-- ko ifnot: nameSummary() && nameSummary().length -->
+                <h3 class="afs-report-nodata-message">{% trans "There are no names for this resource" %}</h3>
+                <!-- /ko -->
+
                 <!-- ko if: nameSummary() && nameSummary().length -->
                 <div class="afs-table pad-btm">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -182,7 +187,12 @@
         </div>
         <!-- Dates -->
         <div class="afs-report-section">
+            <h2 class="afs-report-section-title">{% trans "Dates of Project" %}</h2>
             <div class="afs-report-subsection">
+                <!-- ko ifnot: datesSummary() && datesSummary().length -->
+                <h3 class="afs-report-nodata-message">{% trans "There are no dates for this resource" %}</h3>
+                <!-- /ko -->
+
                 <!-- ko if: datesSummary() && datesSummary().length -->
                 <div class="afs-table pad-btm">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -209,70 +219,57 @@
         </div>
         <!-- Activity Type -->
         <div class="afs-report-section">
+            <h2 class="afs-report-section-title">{% trans "Activity Type of Project" %}</h2>
             <div class="afs-report-subsection">
+                <!-- ko ifnot: activityTypeSummary() && activityTypeSummary().length -->
+                <h3 class="afs-report-nodata-message">{% trans "There are no activity types for this resource" %}</h3>
+                <!-- /ko -->
+
                 <!-- ko if: activityTypeSummary() && activityTypeSummary().length -->
-                <div class="afs-table pad-btm">
-                    <table class="table table-striped" cellspacing="0" width="100%">
-                        <thead>
-                            <tr class="afs-table-header">
-                                <th>{% trans "Activity Type" %}</th>
-                            </tr>
-                        </thead>
-                        <tbody data-bind="dataTablesForEach: { data: activityTypeSummary, dataTableOptions: $data.getTableConfig(1) }">
-                            <tr>
-                                <td data-bind="text: content"></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="afs-report-data-block" data-bind="foreach: activityTypeSummary ">
+                    <div class="afs-block-value" data-bind="text: content"></div>
                 </div>
                 <!-- /ko -->
             </div>
         </div>
         <!-- Parent Project -->
         <div class="afs-report-section">
+            <h2 class="afs-report-section-title">{% trans "Parent Project" %}</h2>
             <div class="afs-report-subsection">
+                <!-- ko ifnot: parentProjectSummary() && parentProjectSummary().length -->
+                <h3 class="afs-report-nodata-message">{% trans "There is not a parent project for this resource" %}</h3>
+                <!-- /ko -->
+
                 <!-- ko if: parentProjectSummary() && parentProjectSummary().length -->
-                <div class="afs-table pad-btm">
-                    <table class="table table-striped" cellspacing="0" width="100%">
-                        <thead>
-                            <tr class="afs-table-header">
-                                <th>{% trans "Parent Project" %}</th>
-                            </tr>
-                        </thead>
-                        <tbody data-bind="dataTablesForEach: { data: parentProjectSummary, dataTableOptions: $data.getTableConfig(1) }">
-                            <tr>
-                                <td><a class="afs-table-link" data-bind="click: function() {window.open(link);}, text: content" href="javascript:void(0)"></a></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="afs-report-data-block" data-bind="foreach: parentProjectSummary ">
+                    <div class="afs-block-value"><a data-bind="click: function() {window.open(link);}, text: content" href="javascript:void(0)"></a></div>
                 </div>
                 <!-- /ko -->
             </div>
         </div>
         <!-- Project Team -->
         <div class="afs-report-section">
+            <h2 class="afs-report-section-title">{% trans "Project Team" %}</h2>
             <div class="afs-report-subsection">
+                <!-- ko ifnot: teamSummary() && teamSummary().length -->
+                <h3 class="afs-report-nodata-message">{% trans "There are no team members for this resource" %}</h3>
+                <!-- /ko -->
+
                 <!-- ko if: teamSummary() && teamSummary().length -->
-                <div class="afs-table pad-btm">
-                    <table class="table table-striped" cellspacing="0" width="100%">
-                        <thead>
-                            <tr class="afs-table-header">
-                                <th>{% trans "Project Team" %}</th>
-                            </tr>
-                        </thead>
-                        <tbody data-bind="dataTablesForEach: { data: teamSummary, dataTableOptions: $data.getTableConfig(1) }">
-                            <tr>
-                                <td><a class="afs-table-link" data-bind="click: function() {window.open(link);}, text: content" href="javascript:void(0)"></a></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="afs-report-data-block" data-bind="foreach: teamSummary ">
+                    <div class="afs-block-value"><a data-bind="click: function() {window.open(link);}, text: content" href="javascript:void(0)"></a><!-- ko if: $index() < $parent.teamSummary().length - 1  -->, <!-- /ko --></div>
                 </div>
                 <!-- /ko -->
             </div>
         </div>
         <!-- Statements -->
         <div class="afs-report-section">
-            <div class="afs-report-subsection">
+            <h2 class="afs-report-section-title">{% trans "Statements about Project" %}</h2>
+            <div class="afs-report-subsection" >
+                <!-- ko ifnot: statementsSummary() && statementsSummary().length -->
+                <h3 class="afs-report-nodata-message">{% trans "There are no statements for this resource" %}</h3>
+                <!-- /ko -->
+
                 <!-- ko if: statementsSummary() && statementsSummary().length -->
                 <div class="afs-table pad-btm">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -295,7 +292,12 @@
         </div>
         <!-- Identifier -->
         <div class="afs-report-section">
-            <div class="afs-report-subsection">
+            <h2 class="afs-report-section-title">{% trans "Identifier for Project" %}</h2>
+            <div class="afs-report-subsection" >
+                <!-- ko ifnot: identifierSummary() && identifierSummary().length -->
+                <h3 class="afs-report-nodata-message">{% trans "There are no identiers for this resource" %}</h3>
+                <!-- /ko -->
+
                 <!-- ko if: identifierSummary() && identifierSummary().length -->
                 <div class="afs-table">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -308,27 +310,6 @@
                         <tbody data-bind="dataTablesForEach: { data: identifierSummary, dataTableOptions: getTableConfig(2) }">
                             <tr>
                                 <td data-bind="text: content"></td>
-                                <td data-bind="text: type"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <!-- /ko -->
-            </div>
-        </div>
-        <!-- Type -->
-        <div class="afs-report-section">
-            <div class="afs-report-subsection">
-                <!-- ko if: typeSummary() && typeSummary().length -->
-                <div class="afs-table pad-btm">
-                    <table class="table table-striped" cellspacing="0" width="100%">
-                        <thead>
-                            <tr class="afs-table-header">
-                                <th>{% trans "Project Type" %}</th>
-                            </tr>
-                        </thead>
-                        <tbody data-bind="dataTablesForEach: { data: typeSummary, dataTableOptions: $data.getTableConfig(1) }">
-                            <tr>
                                 <td data-bind="text: type"></td>
                             </tr>
                         </tbody>
