--- a/afs/templates/views/components/reports/observation.htm
+++ b/afs/templates/views/components/reports/observation.htm
@@ -254,7 +254,7 @@
         </div>
         <!-- Person Carried out -->
         <div class="afs-report-section">
-            <h2 class="afs-report-section-title">{% trans "Persons Carried out" %}</h2>
+            <h2 class="afs-report-section-title">{% trans "Persons Carrying Out Observation" %}</h2>
             <div class="afs-report-subsection" >
                 <!-- ko ifnot: personSummary() && personSummary().length-->
                 <h3 class="afs-report-nodata-message">{% trans "There are no persons for this resource" %}</h3>
