--- a/afs/templates/views/components/reports/textual-work.htm
+++ b/afs/templates/views/components/reports/textual-work.htm
@@ -134,23 +134,53 @@
 <div class="model-summary-report">
     <div class="afs-report-page">
         <!-- Names -->
-        <div data-bind="component: {
-            name: 'views/components/reports/scenes/name',
-            params: {
-                data: resource,
-                cards: nameCards,
-                dataConfig: nameDataConfig
-            }
-        }"></div>
-        <!-- Description -->
-        <div data-bind="component: {
-            name: 'views/components/reports/scenes/description',
-            params: {
-                data: resource,
-                cards: descriptionCards,
-                dataConfig: descriptionDataConfig
-            }
-        }"></div>
+        <div class="afs-report-section">
+            <h2 class="afs-report-section-title">{% trans "Textual Work Name" %}</h2>
+            <div class="afs-report-subsection" >
+                <!-- ko ifnot: nameSummary() -->
+                <h3 class="afs-report-nodata-message">{% trans "There is no name for this resource" %}</h3>
+                <!-- /ko -->
+                <!-- ko if: nameSummary() -->
+                <div class="afs-report-data-block">
+                    <div class="afs-block-attributes">
+                        <div class="afs-block-key">{% trans "Name: " %}</div>
+                        <div class="afs-block-value" data-bind="text: nameSummary().content"></div>
+                    </div>
+                    <div class="afs-block-attributes pad-btm">
+                        <div class="afs-block-key">{% trans "Type: " %}</div>
+                        <div class="afs-block-value" data-bind="text: nameSummary().type"></div>
+                    </div>
+                </div>
+                <!-- /ko -->
+            </div>
+        </div>
+        <!-- Statement -->
+        <div class="afs-report-section">
+            <h2 class="afs-report-section-title">{% trans "Statements" %}</h2>
+            <div class="afs-report-subsection" >
+                <!-- ko ifnot: statementSummary() && statementSummary().length -->
+                <h3 class="afs-report-nodata-message">{% trans "There are no statements for this resource" %}</h3>
+                <!-- /ko -->    
+                <!-- ko if: statementSummary() && statementSummary().length -->
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Statement" %}</th>
+                                <th>{% trans "Type" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: statementSummary, dataTableOptions: getTableConfig(2) }">
+                            <tr>
+                                <td data-bind="text: content"></td>
+                                <td data-bind="text: type"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /ko -->
+            </div>
+        </div>
     </div>
 </div>
 
